--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <style type="text/css">body{ background-color: #FFFFFF; }h1, p, h2{ font-family: sans-serif; color: #000000; text-align: left; }a:link { color: inherit; text-decoration: none }a:hover { text-decoration: underline; }a:visited { color: inherit; }a:active { color: #424242; }</style>
-</head>
+      <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-82547706-3', 'auto');
+  ga('send', 'pageview');
+</script>
+    </head>
 <body>
     <header>
         <h1>
